--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://mysql-bank:3306/bankdb?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/bankdb?useSSL=false&serverTimezone=UTC
     username: root
     password: root123
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
@@ -11,3 +12,4 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
